Repair alignment

--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,10 @@ ul.header li a {
 }
 .content {
   background-color: rgba(255,255,255,0.5);
-  border-radius: 0.5em;
-  padding: 20px;
+  border-radius: 1em;
+  margin: 25px;
+  padding: 1em;
+  height: 100%;
 }
 .content h2 {
   padding: 0;
@@ -38,4 +40,18 @@ ul.header li a {
 }
 .active {
   background-color: #01579B;
+}
+
+#root {
+  background-color: #01579B;
+  color: white;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  /*min-height: 100vh;*/
+  /*justify-content: center;*/
+  /*padding: 0 30px;*/
+  /*text-align: center;*/
 }
